# seeyon_v5_deploy

./: .gitignore  Cargo.toml  deploy.example.toml  deploy.toml
src/: archiver.rs  config.rs  deployer.rs  logger.rs  main.rs  sftp_client.rs  ssh_client.rs
