[package]
name = "deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ssh2 = "0.9"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tar = "0.4"
flate2 = { version = "1.0", features = ["zlib"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
